MDEV-27438 [testing] add an abort() to xarecover_do_commit_or_rollback

We don't have a reproducible testcase, so let's add an abort() to
find out which test reaches the path, so that we can attempt to create
a testcase...